// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch snapshot tests when has checked property renders switch with checked true 1`] = `
<div
  className="switch"
>
  <input
    checked={true}
    className="switch__input"
    disabled={null}
    id="name"
    name="name"
    onChange={null}
    type="checkbox"
    value="value"
  />
  <span
    className="switch__checked"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 switch__icon"
      data-icon="check"
      data-prefix="far"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Switch snapshot tests when has disabled property renders switch with disabled true 1`] = `
<div
  className="switch"
>
  <input
    checked={null}
    className="switch__input"
    disabled={true}
    id="name"
    name="name"
    onChange={null}
    type="checkbox"
    value="value"
  />
  <span
    className="switch__checked"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 switch__icon"
      data-icon="check"
      data-prefix="far"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Switch snapshot tests when has label property renders switch with label 1`] = `
<div
  className="switch"
>
  <input
    checked={null}
    className="switch__input"
    disabled={null}
    id="name"
    name="name"
    onChange={null}
    type="checkbox"
    value="value"
  />
  <span
    className="switch__checked"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 switch__icon"
      data-icon="check"
      data-prefix="far"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
  <label
    className="switch__label"
    htmlFor="name"
  >
    label
  </label>
</div>
`;

exports[`Switch snapshot tests when pass only required props renders switch properly 1`] = `
<div
  className="switch"
>
  <input
    checked={null}
    className="switch__input"
    disabled={null}
    id="name"
    name="name"
    onChange={null}
    type="checkbox"
    value="value"
  />
  <span
    className="switch__checked"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 switch__icon"
      data-icon="check"
      data-prefix="far"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;
